--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>
-            
-        </title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>GA - Press Release</title>
+</head>
+<body>
+    <h1> General Assembly</h1>
+    <h2>Press Release</h2>
+    <p>General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurship, with campuses around the world in:</p>
+<ul>
+    <li>Riyadh</li>
+    <li>Jeddah</li>
+    <li>Hong Kong</li>
+    <li>New York City</li>
+</ul>
+<p> For more information, please visit General Assembly's <a target="_blank" href="https://generalassemb.ly/">website</a> </p>
+</body>
 </html>
